--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,18 +37,19 @@ hr {
   border-radius: 25px;
   color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  transition: 400ms;
   cursor: pointer;
 }
 .btn button:hover {
   background-color: rgb(167, 106, 230);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
   filter: brightness(1.15);
-  transition: 400ms;
 }
 
 a {
   text-decoration: none;
   color: black;
+  width: 100%;
 }
 
 .fa-heart::before {
@@ -142,13 +143,16 @@ a {
 }
 
 /****** 2ème section *******/
+#functioning {
+  padding: 0 1rem;
+}
+
 .functioning__txt {
   width: 100%;
   max-width: 1053px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 30px;
-  padding-left: 15px;
 }
 
 .functioning__cards {
@@ -219,22 +223,28 @@ a {
 }
 
 /****** 3ème section les restaurants *******/
+#restaurants {
+  padding: 0 1rem;
+  background-color: #F6F6F6;
+}
+
 .restaurant {
   width: 100%;
   max-width: 1053px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
 }
 
 .restaurants__cards {
-  background-color: #F6F6F6;
   padding-top: 10px;
   padding-bottom: 30px;
 }
 .restaurants__cards .card__grid {
   display: grid;
   justify-content: center;
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
 }
 @media (min-width: 1024px) {
   .restaurants__cards .card__grid {
@@ -243,12 +253,6 @@ a {
     gap: 50px;
     justify-content: center;
     padding-bottom: 20px;
-  }
-  .restaurants__cards .card__grid .card__grid > :first-child {
-    justify-items: end;
-  }
-  .restaurants__cards .card__grid .card__grid > :last-child {
-    justify-items: start;
   }
 }
 @media (min-width: 1024px) {
@@ -268,18 +272,17 @@ a {
   position: relative;
   border: #F6F6F6 1px solid;
   background-color: white;
-  width: 340px;
+  width: 100%;
   height: 251px;
   border-radius: 15px;
+  transition: 500ms;
 }
 .restaurants__cards .card:hover {
   transform: scale(1.05);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  transition: 500ms;
 }
 @media (min-width: 768px) {
   .restaurants__cards .card {
-    width: 490px;
     height: 251px;
   }
 }
@@ -294,18 +297,13 @@ a {
   z-index: 2;
 }
 .restaurants__cards .card img {
-  width: 340px;
+  width: 100%;
   height: 180px;
   -o-object-fit: cover;
      object-fit: cover;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   z-index: -1;
-}
-@media (min-width: 768px) {
-  .restaurants__cards .card img {
-    width: 490px;
-  }
 }
 .restaurants__cards .card .card__content {
   display: flex;
@@ -509,7 +507,7 @@ footer .foot p {
   width: 349px;
   height: 72px;
   background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   margin-bottom: 22px;
   border-radius: 15px;
   position: relative;
@@ -555,6 +553,7 @@ footer .foot p {
   background-color: white;
   padding: 5px;
   display: none;
+  transition: 50ms;
 }
 .food .card:hover .check {
   width: 69px;
@@ -565,7 +564,6 @@ footer .foot p {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 50ms;
 }
 .food .card:hover .check i {
   display: block;
@@ -576,6 +574,9 @@ footer .foot p {
   align-items: flex-end;
   margin-right: 10px;
   margin-top: 25px;
+}
+.food .card .card__price p {
+  font-weight: bold;
 }
 
 .commander {
