--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -50,6 +50,7 @@ hr {
         border-radius: 25px;
         color: #ffffff;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        transition: 400ms;
 
         cursor: pointer;
 
@@ -57,14 +58,15 @@ hr {
             background-color: rgb(167, 106, 230);
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
             filter: brightness(1.15);
-            transition: 400ms;
+            
         }
     }
 }
 
 a {
     text-decoration: none;
-    color: black
+    color: black;
+    width: 100%;
 }
 
 .fa-heart::before {
@@ -157,13 +159,16 @@ a {
 }
 
 /****** 2ème section *******/
+ #functioning {
+    padding: 0 1rem;
+ }
+
 .functioning__txt {
     width: 100%;
     max-width: 1053px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 30px;
-    padding-left: 15px;
 }
 
 .functioning__cards {
@@ -235,22 +240,28 @@ a {
 
 /****** 3ème section les restaurants *******/
 
+#restaurants {
+    padding: 0 1rem;
+    background-color: #F6F6F6;
+}
+
 .restaurant {
     width: 100%;
     max-width: 1053px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
 }
 
 .restaurants__cards {
-    background-color: #F6F6F6;
     padding-top: 10px;
     padding-bottom: 30px;
 
     .card__grid {
         display: grid;
         justify-content: center;
+        max-width: 1080px;
+        margin-left: auto;
+        margin-right: auto;
 
         @media (min-width: 1024px) {
             display: grid;
@@ -259,13 +270,6 @@ a {
             justify-content: center;
             padding-bottom: 20px;
 
-            .card__grid> :first-child {
-                justify-items: end;
-            }
-
-            .card__grid> :last-child {
-                justify-items: start;
-            }
         }
 
         h1 {
@@ -290,19 +294,19 @@ a {
         position: relative;
         border: #F6F6F6 1px solid;
         background-color: white;
-        width: 340px;
+        width: 100%;
         height: 251px;
         border-radius: 15px;
+        transition: 500ms;
 
 
         &:hover {
             transform: scale(1.05); // Zoom au survol
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); // Ombre au survol
-            transition: 500ms;
+            
         }
 
         @media (min-width: 768px) {
-            width: 490px;
             height: 251px;
         }
 
@@ -320,16 +324,13 @@ a {
         }
 
         img {
-            width: 340px;
+            width: 100%;
             height: 180px;
             object-fit: cover;
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
             z-index: -1;
 
-            @media (min-width: 768px) {
-                width: 490px;
-            }
         }
 
         .card__content {
@@ -557,7 +558,7 @@ footer {
         width: 349px;
         height: 72px;
         background-color: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         margin-bottom: 22px;
         border-radius: 15px;
         position: relative;
@@ -607,6 +608,7 @@ footer {
                 background-color: white;
                 padding: 5px;
                 display: none;
+                transition: 50ms;
 
             }
         }
@@ -618,7 +620,7 @@ footer {
             border-bottom-right-radius: 15px;
             background-color: #99E2D0;
             @include flex-center;
-            transition: 50ms;
+            
 
             i {
                 display: block;
@@ -631,6 +633,10 @@ footer {
             align-items: flex-end;
             margin-right: 10px;
             margin-top: 25px;
+
+            p {
+                font-weight: bold;
+            }
         }
     }
 }
