--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -311,16 +311,23 @@ a {
         }
 
         .btn__new {
-            button {
                 position: absolute;
+                width: 80px;
+                height: 29px;
                 top: 10px;
-                right: 10px;
+                left: 420px;
+                text-align: center;
                 border-radius: 3px;
                 border: #99E2D0 1px solid;
                 background-color: #99E2D0;
                 color: #008766;
-                z-index: 2;
-            }
+                z-index: 1;
+
+                p {
+                    align-items: center;
+                    margin-top: 5px;
+                    margin-bottom: 0;
+                }
         }
 
         img {
@@ -351,38 +358,44 @@ a {
             }
 
             .card__fav {
+                /* Ajoute un espace de 40 pixels à droite et 20 pixels en haut */
                 padding-right: 40px;
                 margin-top: 20px;
-                position: relative;
-
+                position: relative; /* Positionne cet élément relativement par rapport à son conteneur parent */
+            
+                /* Positionne les icônes font-awesome de manière absolue dans l'élément .card__fav */
                 .fa-regular,
                 .fa-solid {
                     position: absolute;
                     top: 0;
                     left: 0;
                 }
-
+            
                 .fa-regular {
-                    color: black;
-                    transition: transform 1s;
+                    color: black; /* Couleur de l'icône noire */
+                    transition: transform 1s; /* Ajoute une transition de 1 seconde à la transformation */
                 }
-
+            
                 .fa-solid {
-                    opacity: 0;
-                    transition: opacity 1s;
+                    opacity: 0; /* Rend l'icône solide transparente au départ */
+                    transition: opacity 1s; /* Ajoute une transition de 1 seconde à l'opacité */
                 }
-
+            
+                /* Lorsque survolé */
                 &:hover {
+                    /* Cache l'icône régulière en la réduisant à l'échelle 0 */
                     .fa-regular {
                         transform: scale(0);
                     }
-
+            
+                    /* Affiche l'icône solide en augmentant son opacité à 1 et change sa couleur */
                     .fa-solid {
                         opacity: 1;
-                        color: rgb(147, 86, 220);
+                        color: rgb(147, 86, 220); /* Change la couleur de l'icône solide en violet */
                     }
                 }
             }
+            
         }
     }
 }
